Add jquery-ui calendar selector for dashboard dates. [#10990795]

--- a/app/views/reports/dashboard.html.haml
+++ b/app/views/reports/dashboard.html.haml
@@ -1,17 +1,8 @@
 %h1= I18n.t('report.header')
 
-%a#this_week{:href => ""} This week
-%a#last_week{:href => ""} Last week
-%a#this_month{:href => ""} This month
-%a#last_month{:href => ""} Last month
-%a#this_year{:href => ""} This year
-%a#last_year{:href => ""} Last year
-%a#lifetime{:href => ""} Lifetime
-%br
-
 =form_tag dashboard_path(@user[:id], @user[:key]), :method => :get do
-  == #{I18n.t('report.start_date')} #{select_date(@start_date, {:start_year => 2010, :end_year => Date.today.year, :prefix => "start_date"})}
-  == #{I18n.t('report.end_date')} #{select_date(@end_date, {:start_year => 2010, :end_year => Date.today.year, :prefix => "end_date"})}
+  == #{I18n.t('report.start_date')} #{text_field_tag(:start_date, I18n.l(@start_date), {:id => "start_date"})}
+  == #{I18n.t('report.end_date')} #{text_field_tag(:end_date, I18n.l(@end_date), {:id => "end_date"})}
   = submit_tag I18n.t('report.update')
 %br
 
@@ -50,26 +41,25 @@
 - content_for :page_javascript do
   :javascript
     $(function(){
-      function set_selected_option(select_id, value){
-        // Set the selected element on the select tag with id select tag to the option with value value.
-        $("#" + select_id + " option[selected]").removeAttr("selected");
-        $("#" + select_id + " option[value='" + value + "']").attr("selected","selected");
-      }
 
-      function set_date_selector_click(id, start_date_year, start_date_month, start_date_day, end_date_year, end_date_month, end_date_day){
-        // Set the on click for link with id 'id' to update the date selectors with the given start and end dates.
-        $("#"+id).click(function(){
-          set_selected_option("start_date_year", start_date_year);
-          set_selected_option("start_date_month", start_date_month);
-          set_selected_option("start_date_day", start_date_day);
-          set_selected_option("end_date_year", end_date_year);
-          set_selected_option("end_date_month", end_date_month);
-          set_selected_option("end_date_day", end_date_day);
-          $("form").submit();
-          return false;
-        });
-      }
 
+      
+      var dates = $( "#start_date, #end_date" ).datepicker({
+        numberOfMonths: 1,
+        minDate: new Date(2011, 1-1, 1),
+        onSelect: function( selectedDate ) {
+          var option = this.id == "start_date" ? "minDate" : "maxDate",
+          instance = $( this ).data( "datepicker" ),
+          date = $.datepicker.parseDate(
+          instance.settings.dateFormat ||
+          $.datepicker._defaults.dateFormat,
+          selectedDate, instance.settings );
+          dates.not( this ).datepicker( "option", option, date );
+        }
+      });
+      
+      $.datepicker.setDefaults($.datepicker.regional["#{I18n.locale.to_s}"]);
+  		
       // Make the 'page_view_plot' div a highchart showing the total view counts.
       var view_chart;
       chart = new Highcharts.Chart({
@@ -146,15 +136,5 @@
         }]
      });
       
-      
-
-      // Setup click handlers for the short cut date range selectors.
-      set_date_selector_click("this_week", #{1.week.ago.year}, #{1.week.ago.month}, #{1.week.ago.day}, #{Date.today.year}, #{Date.today.month}, #{Date.today.day});
-      set_date_selector_click("last_week", #{2.weeks.ago.year}, #{2.weeks.ago.month}, #{2.weeks.ago.day}, #{1.week.ago.year}, #{1.week.ago.month}, #{1.week.ago.day});
-      set_date_selector_click("this_month", #{1.month.ago.year}, #{1.month.ago.month}, #{1.month.ago.day}, #{Date.today.year}, #{Date.today.month}, #{Date.today.day});
-      set_date_selector_click("last_month", #{2.months.ago.year}, #{2.months.ago.month}, #{2.months.ago.day}, #{1.month.ago.year}, #{1.month.ago.month}, #{1.month.ago.day});
-      set_date_selector_click("this_year", #{1.year.ago.year}, #{1.year.ago.month}, #{1.year.ago.day}, #{Date.today.year}, #{Date.today.month}, #{Date.today.day});
-      set_date_selector_click("last_year", #{2.years.ago.year}, #{2.years.ago.month}, #{2.years.ago.day}, #{1.year.ago.year}, #{1.year.ago.month}, #{1.year.ago.day});
-      set_date_selector_click("lifetime", #{90.days.ago.year}, #{90.days.ago.month}, #{90.days.ago.day}, #{Date.today.year}, #{Date.today.month}, #{Date.today.day});
     });
   
