--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.10/jquery-ui.min.js" type="text/javascript"></script>
   <%= javascript_include_tag 'rails', 'highcharts', 'jquery-ui-datepicker-locales' %>
   <%= csrf_meta_tag %>
-  <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.10/themes/ui-lightness/jquery-ui.css">
+  <link rel="stylesheet" href="/flutie/stylesheets/flutie.css">
+  <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.10/themes/redmond/jquery-ui.css">
   <style>
     div.ui-datepicker{
       font-size:11px;
