Add additional tests for per article reports.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,10 @@
     div.ui-datepicker{
       font-size:11px;
     }
+    body {
+      margin: 1em;
+      width: 800px;
+    }
   </style>
 </head>
 <body>
