Include designs. Fix a bug in the article list expander js. Update some translations.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,16 +8,8 @@
   <%= javascript_include_tag 'rails', 'highcharts', 'jquery-ui-datepicker-locales' %>
   <%= csrf_meta_tag %>
   <link rel="stylesheet" href="/flutie/stylesheets/flutie.css">
+  <link rel="stylesheet" href="/stylesheets/stats_design.css">
   <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.10/themes/redmond/jquery-ui.css">
-  <style>
-    div.ui-datepicker{
-      font-size:11px;
-    }
-    body {
-      margin: 1em;
-      width: 800px;
-    }
-  </style>
 </head>
 <body>
 
