--- a/app/views/reports/dashboard.html.haml
+++ b/app/views/reports/dashboard.html.haml
@@ -1,81 +1,112 @@
-%h1= I18n.t('report.header')
-%br
-=form_tag dashboard_path(@user[:id], @user[:key]), :method => :get do
-  == #{I18n.t('report.start_date')} #{text_field_tag(:start_date, I18n.l(@start_date), {:id => "start_date"})}
-  == #{I18n.t('report.end_date')} #{text_field_tag(:end_date, I18n.l(@end_date), {:id => "end_date"})}
-  = submit_tag I18n.t('report.update')
+%p.csv=link_to I18n.t('report.download_data'), article_view_csv_path(@user[:id], @user[:key])  
+
+%h1
+  = I18n.t('report.header')
+%date
+  =form_tag dashboard_path(@user[:id], @user[:key]), :method => :get do
+    == #{I18n.t('report.start_date')} #{text_field_tag(:start_date, I18n.l(@start_date), {:id => "start_date"})}
+    == #{I18n.t('report.end_date')} #{text_field_tag(:end_date, I18n.l(@end_date), {:id => "end_date"})}
+    = submit_tag I18n.t('report.update')
 %br
 
 %h2= I18n.t('report.page_view_graph_header')
 #page_view_plot{:style => "width: 700px; height: 400px;"}
 
-%h2== #{@number_of_articles_with_views} of your articles were viewed #{@total_view_count} times in total.
+%h2.summary= I18n.t('report.article_views_line').gsub('[articles_views]', "#{@number_of_articles_with_views}").gsub('[total_views]', "#{@total_view_count}")
 #source_chart{:style => "width: 400px; height: 400px;"}
 
 %h2= I18n.t('report.articles_header')
 
-%table#article_counts_summary
-  - @article_counts[0..4].each do |ac|
-    - if ac[:count] == 0
-      - break
+%table#article_counts_summary.rounded-corner
+  %thead
     %tr
-      %td
-        %a{:href => "#{ac[:permalink]}"}=ac[:title]
-      %td
-        =link_to "Details", article_dashboard_url(@user[:id], @user[:key], ac[:suite101_article_id], :start_date => @start_date, :end_date => @end_date)
-      %td= ac[:count]
-
-%table#article_counts_full
-  - @article_counts.each do |ac|
-    - if ac[:count] == 0
-      - break
+      %th.rounded-left Article
+      %th.rounded-bg ...
+      %th.rounded-right ...
+  %tfoot
     %tr
-      %td
-        %a{:href => "#{ac[:permalink]}"}=ac[:title]
-      %td
-        =link_to "Details", article_dashboard_url(@user[:id], @user[:key], ac[:suite101_article_id], :start_date => @start_date, :end_date => @end_date)
-      %td= ac[:count]
+      %td.rounded-foot{:colspan => 3}
+        %a#more_article_counts{:href => "#"} Show all
+  %tbody
+    - @article_counts[0..4].each do |ac|
+      - if ac[:count] == 0
+        - break
+      %tr
+        %td
+          %a{:href => "#{ac[:permalink]}"}=ac[:title]
+        %td
+          =link_to I18n.t('report.details'), article_dashboard_url(@user[:id], @user[:key], ac[:suite101_article_id], :start_date => @start_date, :end_date => @end_date)
+        %td= ac[:count]
 
-%a#more_article_counts{:href => "#"}
+
+%table#article_counts_full.rounded-corner
+  %thead
+    %tr
+      %th.rounded-left Article
+      %th.rounded-bg ...
+      %th.rounded-right ...
+  %tfoot
+    %tr
+      %td.rounded-foot{:colspan => 3, :height => 15}
+        %a#less_article_counts{:href => "#"} Show most popular
+  %tbody
+    - @article_counts.each do |ac|
+      - if ac[:count] == 0
+        - break
+      %tr
+        %td
+          %a{:href => "#{ac[:permalink]}"}=ac[:title]
+        %td
+          =link_to I18n.t('report.details'), article_dashboard_url(@user[:id], @user[:key], ac[:suite101_article_id], :start_date => @start_date, :end_date => @end_date)
+        %td= ac[:count]
 
 %h2= I18n.t('report.keyword_header')
-%table
+%table.rounded-corner
+  %thead
+    %tr
+      %th.rounded-left Keyphrases
+      %th.rounded-tab2-right ...
+  %tfoot
+    %tr
+      %td.rounded-foot{:colspan => 2, :height => 15}
   - @keyphrase_counts.each do |k|
     %tr
       %td= k[0]
       %td= k[1]
       
 %h2= I18n.t('report.domain_header')
-%table
+%table.rounded-corner
+  %thead
+    %tr
+      %th.rounded-left Domains
+      %th.rounded-tab2-right ...
+  %tfoot
+    %tr
+      %td.rounded-foot{:colspan => 2, :height => 15}
   - @domain_counts.each do |k|
     %tr
       %td= k[0].blank? ? "[direct]" : k[0]
       %td= k[1]
 
-%p
-  =link_to I18n.t('report.download_data'), article_view_csv_path(@user[:id], @user[:key])  
+
 
 - content_for :page_javascript do
   :javascript
     $(function(){
-      var article_count_toggler = $("#more_article_counts");
-
       function toggle_article_counts(){
         $("#article_counts_summary").toggle();
         $("#article_counts_full").toggle();
-        var txt = $("#article_counts_full").is(':visible') ? 'Show most popular' : 'Show all';
-        article_count_toggler.text(txt);
       };
 
-      article_count_toggler.click(function(){
+      $("#more_article_counts, #less_article_counts").click(function(){
         toggle_article_counts();
         return false;
       });
       
       $("#article_counts_full").hide();
 
-      if($("#article_counts").children().children().length < 5){
-           article_count_toggler.hide();
+      if($("tbody","#article_counts_full").children().length < 5){
+           $("#more_article_counts").hide();
       }
 
       var dates = $( "#start_date, #end_date" ).datepicker({
