Fixing a bug with reports.

--- a/app/views/admin/_raw_page_view.html.haml
+++ b/app/views/admin/_raw_page_view.html.haml
@@ -1,7 +1,7 @@
 %tr
   %td= raw_page_view.id
   %td= raw_page_view.date
-  %td= raw_page_view.suite101_article_id
+  %td= raw_page_view.article_id
   %td= raw_page_view.title
   %td= raw_page_view.permalink
   %td= raw_page_view.referrer_url
