Refactored the code for displaying page view counts.

--- a/app/views/articles_stats/_article_summary.html.haml
+++ b/app/views/articles_stats/_article_summary.html.haml
@@ -2,7 +2,7 @@
   - break
 %tr.ac_summary
   %td
-    = link_to ac[:title], ac[:permalink]
+    = link_to CGI.unescape(ac[:title]), ac[:permalink]
   %td
     =link_to I18n.t('report.details'), article_dashboard_url(@user[:id], @user[:key], ac.article_id, :start_date => @start_date, :end_date => @end_date)
   %td= ac.page_views_count
