--- a/app/views/article_stats/_article_summary.html.haml
+++ b/app/views/article_stats/_article_summary.html.haml
@@ -4,5 +4,5 @@
   %td
     = link_to CGI.unescape(ac[:title]), ac[:permalink]
   %td
-    =link_to I18n.t('report.details'), article_dashboard_url(@user[:id], @user[:key], ac.article_id, :start_date => @start_date, :end_date => @end_date)
+    =link_to I18n.t('report.details'), article_dashboard_url(@user[:key], ac.article_id)
   %td= ac.page_views_count
