--- a/app/views/reports/dashboard.html.haml
+++ b/app/views/reports/dashboard.html.haml
@@ -1,13 +1,14 @@
-%p.csv=link_to I18n.t('report.download_data'), article_view_csv_path(@user[:id], @user[:key])  
+= link_to 'Back to MySuite', 'http://mysuite.suite101.com'
 
 %h1
   = I18n.t('report.header')
 %date
-  =form_tag dashboard_path(@user[:id], @user[:key]), :method => :get do
+  =form_tag dashboard_path(@user[:key]), :method => :get do
     == #{I18n.t('report.start_date')} #{text_field_tag(:start_date, I18n.l(@start_date), {:id => "start_date"})}
     == #{I18n.t('report.end_date')} #{text_field_tag(:end_date, I18n.l(@end_date), {:id => "end_date"})}
     = submit_tag I18n.t('report.update')
 %br
+%p.csv=link_to I18n.t('report.download_data'), article_view_csv_path(@user[:id], @user[:key])  
 
 %h2= I18n.t('report.page_view_graph_header')
 #page_view_plot
