--- a/app/views/reports/article_dashboard.html.haml
+++ b/app/views/reports/article_dashboard.html.haml
@@ -1,13 +1,13 @@
 == &laquo; #{link_to "#{I18n.t('article_report.back_to_dashboard')}", dashboard_path(@user[:key])}
 %h1= I18n.t('report.header')
 %date
-  =form_tag article_dashboard_path(@user[:key], @article_id), :method => :get do
+  =form_tag article_dashboard_path(@user[:key], @article.id), :method => :get do
     == #{I18n.t('report.start_date')} #{text_field_tag(:start_date, I18n.l(@start_date), {:id => "start_date"})}
     == #{I18n.t('report.end_date')} #{text_field_tag(:end_date, I18n.l(@end_date), {:id => "end_date"})}
     = submit_tag I18n.t('report.update')
 %br
 
-%h2= I18n.t('article_report.page_view_graph_header').gsub("[title]","#{@article_title}")
+%h2= I18n.t('article_report.page_view_graph_header').gsub("[title]","#{@article.display_title}")
 #page_view_plot
 
 %h2= I18n.t('article_report.page_views_line').gsub('[total_views]',"#{@total_view_count}")
