--- a/public/stylesheets/stats_design.css
+++ b/public/stylesheets/stats_design.css
@@ -24,11 +24,20 @@ h1 {
 	width: 900px;
 }
 date {
-	color:#999;
-	font-size:12px;
+/*	color:#999;
+	font-size:12px;*/
+	color: #466F73;
+	font-size: 120%;
+}
+date input[type="text"]{
+	margin: 3px;
+}
+input[type="submit"] {
+	/*height: 30px;*/
+	font-size: 14px;
 }
 h2 {
-	background: url("http://graphics.suite101.com/line-separator.png") no-repeat scroll 0 bottom transparent;
+/*	background: url("http://graphics.suite101.com/line-separator.png") no-repeat scroll 0 bottom transparent;*/
 	color: #666666;
 	font-size: 120%;
 	margin: 15px 0 8px;
@@ -49,11 +58,19 @@ h2 {
 	font-weight:bold;
 	text-align:center;
 }
+table {
+	width: 700px;
+	margin: 10px auto;
+	margin-bottom: 20px;
+}
+th.first{
+	width: 600px;
+}
 /* ------------------
 styling for the tables 
 ------------------   */
 
-.rounded-corner {
+/*.rounded-corner {
 	font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
 	font-size: 12px;
 	margin: 45px;
@@ -97,11 +114,11 @@ styling for the tables
 	text-align:center;
 	height:10px;
 }
-
-.rounded-corner tbody tr:hover td {
+*/
+/*.rounded-corner tbody tr:hover td {
 	background: #f1f1f1;
 }
-
+*/
 p.csv a:link {
 	background: url('../images/table-images/download.png') right bottom no-repeat;
 	padding-right:32px;
