--- a/app/views/reports/article_dashboard.html.haml
+++ b/app/views/reports/article_dashboard.html.haml
@@ -1,16 +1,16 @@
 %div{:style=> "margin-top: 15px; margin-bottom: 12px"}
   %h1{:style => "display: inline"}
     == Stats for &quot;#{@article.title}&quot;
-  %a{:href=> "#{dashboard_path(@user[:key])}"} (view all articles)
+  %a{:style => "float: right;", :href=> "#{dashboard_path(@user[:key])}"} View All Articles
 
 %date
   =form_tag article_dashboard_path(@user[:key], @article.id), :method => :get do
-    == #{I18n.t('report.start_date')} #{text_field_tag(:start_date, I18n.l(@start_date), {:id => "start_date"})}
-    == #{I18n.t('report.end_date')} #{text_field_tag(:end_date, I18n.l(@end_date), {:id => "end_date"})}
+    == from #{text_field_tag(:start_date, I18n.l(@start_date), {:id => "start_date"})}
+    == to #{text_field_tag(:end_date, I18n.l(@end_date), {:id => "end_date"})}
     = submit_tag I18n.t('report.update')
 %br
 
-%h2= I18n.t('article_report.page_view_graph_header').gsub("[title]","#{@article.display_title}")
+%h2 People Viewing This Article
 #page_view_plot
 
 %h2.summary
@@ -18,19 +18,16 @@
   /= I18n.t('article_report.page_views_line').gsub('[total_views]',"#{@total_view_count}")
 #source_chart
 
-%h2= I18n.t('report.keyword_header')
-%table.rounded-corner#keyphrases
+%h2 How Are People Finding This Article?
+%table#keyphrases
   = render 'article_stats/keyphrases', :keyphrase_counts => @keyphrase_counts
 
-%h2= I18n.t('report.domain_header')
-%table.rounded-corner
+%h2 Where Are People Coming From?
+%table
   %thead
     %tr
-      %th.rounded-left Domains
-      %th.rounded-tab2-right ...
-  %tfoot
-    %tr
-      %td.rounded-foot{:colspan => 2, :height => 15}
+      %th.first Domains
+      %th Views
   - @domain_counts.each do |k|
     %tr
       %td= k.domain.blank? ? "[direct]" : k.domain
