--- a/app/views/reports/dashboard.html.haml
+++ b/app/views/reports/dashboard.html.haml
@@ -5,11 +5,10 @@
 
 %date
   =form_tag dashboard_path(@user[:key]), :method => :get do
-    == #{I18n.t('report.start_date')} #{text_field_tag(:start_date, I18n.l(@start_date), {:id => "start_date"})}
-    == #{I18n.t('report.end_date')} #{text_field_tag(:end_date, I18n.l(@end_date), {:id => "end_date"})}
+    == from #{text_field_tag(:start_date, I18n.l(@start_date), {:id => "start_date"})}
+    == to #{text_field_tag(:end_date, I18n.l(@end_date), {:id => "end_date"})}
     = submit_tag I18n.t('report.update')
 %br
-%hr
 
 %h2= I18n.t('report.page_view_graph_header')
 #page_view_plot
@@ -17,20 +16,17 @@
 %h2.summary= I18n.t('report.article_views_line').gsub('[articles_views]', "#{@number_of_articles_with_views}").gsub('[total_views]', "#{@total_view_count}")
 #source_chart
 
-%hr
-
 %h2= I18n.t('report.articles_header')
-%table#article_counts_full.rounded-corner
+%table#article_counts_full
   = render 'article_stats/articles_stats', :articles_stats => @article_counts
 
-%hr
 
 %h2= I18n.t('report.keyword_header')
-%table.rounded-corner
+%table
   %thead
     %tr
-      %th.first.rounded-left Keyphrases
-      %th.rounded-tab2-right Views
+      %th.first Keyphrases
+      %th Views
   -# %tfoot
   -#     %tr
   -#       %td.rounded-foot{:colspan => 2, :height => 15}
@@ -39,22 +35,17 @@
       %td= k[0]
       %td= k[1]
 
-%hr
       
 %h2= I18n.t('report.domain_header')
-%table.rounded-corner
+%table
   %thead
     %tr
-      %th.first.rounded-left Domains
-      %th.rounded-tab2-right Views
-  -# %tfoot
-  -#   %tr
-  -#     %td.rounded-foot{:colspan => 2, :height => 15}
+      %th.first Domains
+      %th Views
   - @domain_counts.each do |k|
     %tr
       %td= k[0].blank? ? "[direct]" : k[0]
       %td= k[1]
-
 
 - content_for :page_javascript do
   = javascript_include_tag 'jquery.highcharts.page-view-plot'
